// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c4 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  max-width: 600px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
  text-align: center;
}

.c10 {
  box-sizing: border-box;
  text-align: center;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  border-radius: 4px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border: 1px solid;
  box-sizing: border-box;
  background-color: transparent;
  cursor: pointer;
  font-family: inherit;
  font-weight: bold;
  outline: none;
  opacity: 0.56;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  border-color: rgba(255,255,255,0.87);
  color: #FFFFFF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 24px;
  width: 224px;
  border-color: rgba(255,255,255,0.87);
  color: rgba(255,255,255,0.87);
}

.c12:hover {
  opacity: 1;
}

.c12:active {
  opacity: 0.24;
}

.c12 > span {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c12:hover,
.c12:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12:hover,
.c12:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c7 {
  display: block;
  outline: none;
  margin-bottom: 24px;
  margin-left: auto;
  margin-right: auto;
  height: 160px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  font-size: 24px;
  margin: 0px;
  margin-bottom: 8px;
  font-weight: 700;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 14px;
  margin: 0px;
  font-weight: 400;
}

.c3 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Servers
      </div>
    </div>
    <div
      class="c3 sc-AxirZ c4"
      width="100%"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <img
            class="c7"
            height="160px"
            src="file_stub"
          />
          <div
            class="c8"
            font-size="24"
            font-weight="700"
          >
            Add your first server to Teleport
          </div>
          <div
            class="c9"
            font-size="14"
            font-weight="400"
            style="opacity: 0.6;"
          >
            Teleport Server Access consolidates SSH access across all environments.
          </div>
        </div>
        <div
          class="c10"
        >
          <a
            href="/web/discover"
            style="text-decoration: none;"
          >
            <button
              class="c11"
              kind="primary"
              width="224px"
            >
              Add 
              server
            </button>
          </a>
          <a
            class="c12"
            href="https://goteleport.com/docs/server-access/getting-started/"
            rel="noreferrer"
            target="_blank"
            width="224px"
          >
            <span>
              View Documentation
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c3 a {
  color: #FFFFFF;
}

.c7 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c26 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  height: 24px;
}

.c26:active {
  opacity: 0.56;
}

.c26:hover,
.c26:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c26:active {
  opacity: 0.24;
}

.c26:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 18px;
}

.c23 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c27 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 8px;
  margin-right: -8px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c31 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c5 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c11 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
  display: flex;
  align-items: center;
  gap: 8px;
}

.c20 {
  box-sizing: border-box;
  display: flex;
}

.c24 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c29 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c12 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c12[disabled] {
  cursor: default;
}

.c15 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c15:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #651FFF;
}

.c13 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c13:checked + .c14 {
  background: #512FC9;
}

.c13:checked + .c14:before {
  transform: translate(16px,-50%);
}

.c13:disabled + .c14 {
  background: #222C59;
}

.c13:disabled + .c14:before {
  background: #455a64;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c22 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c22 > thead > tr > th,
.c22 > tbody > tr > th,
.c22 > tfoot > tr > th,
.c22 > thead > tr > td,
.c22 > tbody > tr > td,
.c22 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c22 > thead > tr > th:first-child,
.c22 > tbody > tr > th:first-child,
.c22 > tfoot > tr > th:first-child,
.c22 > thead > tr > td:first-child,
.c22 > tbody > tr > td:first-child,
.c22 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c22 > thead > tr > th:last-child,
.c22 > tbody > tr > th:last-child,
.c22 > tfoot > tr > th:last-child,
.c22 > thead > tr > td:last-child,
.c22 > tbody > tr > td:last-child,
.c22 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c22 > tbody > tr > td {
  vertical-align: middle;
}

.c22 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c22 > thead > tr > th .c18 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c22 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c22 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c22 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c4 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c28 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c25 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-right: 4px;
  cursor: pointer;
}

.c30 {
  background: none;
  border: none;
  cursor: pointer;
}

.c30 .c18 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c30:hover .c18,
.c30:focus .c18 {
  opacity: 1;
}

.c30:disabled {
  cursor: default;
}

.c30:disabled .c18 {
  opacity: 0.1;
}

.c10 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c8 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c9 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-right: 184px;
}

.c9:hover,
.c9:focus,
.c9:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c9::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c17 {
  vertical-align: middle;
  display: inline-block;
  height: 18px;
}

.c17:hover {
  cursor: pointer;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Servers
    </div>
  </div>
  <div
    class="c3"
    kind="danger"
  >
    <div>
      some error message
    </div>
  </div>
  <form
    class="c4"
  >
    <div
      class="c5"
      width="100%"
    >
      <div
        class="c6"
        style="width: 70%;"
      >
        <div
          class="c7"
          width="100%"
        >
          <div
            class="c8"
          >
            <input
              class="c9"
              placeholder="SEARCH..."
              value=""
            />
            <div
              class="c10"
            >
              <div
                class="c11"
              >
                <label
                  class="c12"
                >
                  <input
                    class="c13"
                    type="checkbox"
                  />
                  <div
                    class="c14 c15"
                  />
                </label>
                <div
                  class="c16"
                >
                  Advanced
                </div>
                <span
                  class="c17"
                >
                  <span
                    class="c18 c19 icon icon-info_outline "
                    color="light"
                    font-size="4"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c20"
      >
        <div
          class="c21"
          color="text.contrast"
          style="text-transform: uppercase;"
        >
          Showing 
          <strong>
            1
          </strong>
           - 
          <strong>
            7
          </strong>
           of
           
          <strong>
            7
          </strong>
        </div>
      </div>
    </div>
  </form>
  <table
    class="c22"
  >
    <thead>
      <tr>
        <th>
          <a>
            Hostname
            <span
              class="c18 c23 icon icon-chevron-up "
              color="light"
              title="sort items asc"
            />
          </a>
        </th>
        <th
          style="cursor: default;"
        >
          Address
        </th>
        <th
          style="cursor: default;"
        >
          Labels
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          fujedu
        </td>
        <td>
          172.10.1.20:3022
        </td>
        <td>
          <div
            class="c24"
          >
            <div
              class="c25"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c25"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c26"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c18 c27 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          facuzguv
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c24"
          >
            <div
              class="c25"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c25"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c26"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c18 c27 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          duzsevkig
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c24"
          >
            <div
              class="c25"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c25"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c26"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c18 c27 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          kuhinur
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c24"
          >
            <div
              class="c25"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c25"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c26"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c18 c27 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c24"
          >
            <div
              class="c25"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c25"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c26"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c18 c27 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          <span
            style="cursor: default;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ⟵ tunnel
          </span>
        </td>
        <td>
          <div
            class="c24"
          >
            <div
              class="c25"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c25"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c26"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c18 c27 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          <span
            style="cursor: default;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ⟵ tunnel
          </span>
        </td>
        <td>
          <div
            class="c24"
          >
            <div
              class="c25"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c25"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c26"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c18 c27 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="c28"
  >
    <div
      class="c29"
      width="100%"
    >
      <div
        class="c20"
      >
        <button
          class="c30"
          title="Previous page"
        >
          <span
            class="c18 c31 icon icon-arrow-left-circle "
            color="light"
            font-size="3"
          />
        </button>
        <button
          class="c30"
          title="Next page"
        >
          <span
            class="c18 c31 icon icon-arrow-right-circle "
            color="light"
            font-size="3"
          />
        </button>
      </div>
    </div>
  </nav>
</div>
`;

exports[`loaded 1`] = `
.c10 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
  text-transform: none;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: #651FFF;
}

.c7:active {
  background: #354AA4;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c29 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  height: 24px;
}

.c29:active {
  opacity: 0.56;
}

.c29:hover,
.c29:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c29:active {
  opacity: 0.24;
}

.c29:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c22 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 18px;
}

.c26 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c30 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 8px;
  margin-right: -8px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c34 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c14 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
  display: flex;
  align-items: center;
  gap: 8px;
}

.c23 {
  box-sizing: border-box;
  display: flex;
}

.c27 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c32 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c15 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c15[disabled] {
  cursor: default;
}

.c18 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c18:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #651FFF;
}

.c16 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c16:checked + .c17 {
  background: #512FC9;
}

.c16:checked + .c17:before {
  transform: translate(16px,-50%);
}

.c16:disabled + .c17 {
  background: #222C59;
}

.c16:disabled + .c17:before {
  background: #455a64;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c4 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 280px;
  display: flex;
  align-items: center;
  height: 32px;
  border: 1px solid;
  border-radius: 4px;
  border-color: rgba(255,255,255,0.24);
}

.c5 {
  opacity: 0.75;
  font-size: 11px;
  font-weight: 500;
  padding: 0 8px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
}

.c6 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-sizing: border-box;
  border-bottom-left-radius: unset;
  border-top-left-radius: unset;
  display: block;
  outline: none;
  width: 100%;
  height: 100%;
  box-shadow: none;
  padding-left: 8px;
  font-size: 12px;
  color: rgba(255,255,255,0.87);
  background-color: #222C59;
}

.c6::-ms-clear {
  display: none;
}

.c6:read-only {
  cursor: not-allowed;
}

.c6::placeholder {
  opacity: 1;
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c6:hover,
.c6:focus {
  background: #2C3A73;
}

.c25 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c25 > thead > tr > th,
.c25 > tbody > tr > th,
.c25 > tfoot > tr > th,
.c25 > thead > tr > td,
.c25 > tbody > tr > td,
.c25 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c25 > thead > tr > th:first-child,
.c25 > tbody > tr > th:first-child,
.c25 > tfoot > tr > th:first-child,
.c25 > thead > tr > td:first-child,
.c25 > tbody > tr > td:first-child,
.c25 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c25 > thead > tr > th:last-child,
.c25 > tbody > tr > th:last-child,
.c25 > tfoot > tr > th:last-child,
.c25 > thead > tr > td:last-child,
.c25 > tbody > tr > td:last-child,
.c25 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c25 > tbody > tr > td {
  vertical-align: middle;
}

.c25 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c25 > thead > tr > th .c21 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c25 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c25 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c25 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c8 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c31 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c28 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-right: 4px;
  cursor: pointer;
}

.c33 {
  background: none;
  border: none;
  cursor: pointer;
}

.c33 .c21 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c33:hover .c21,
.c33:focus .c21 {
  opacity: 1;
}

.c33:disabled {
  cursor: default;
}

.c33:disabled .c21 {
  opacity: 0.1;
}

.c13 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c11 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c12 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-right: 184px;
}

.c12:hover,
.c12:focus,
.c12:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c12::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c20 {
  vertical-align: middle;
  display: inline-block;
  height: 18px;
}

.c20:hover {
  cursor: pointer;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Servers
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        width="280px"
      >
        <div
          class="c5"
        >
          SSH:
        </div>
        <input
          class="c6"
          color="text.main"
          placeholder="login@host:port"
        />
      </div>
      <a
        href="/web/discover"
        style="text-decoration: none;"
      >
        <button
          class="c7"
          kind="primary"
          title=""
          width="240px"
        >
          Add 
          server
        </button>
      </a>
    </div>
  </div>
  <form
    class="c8"
  >
    <div
      class="c9"
      width="100%"
    >
      <div
        class="c3"
        style="width: 70%;"
      >
        <div
          class="c10"
          width="100%"
        >
          <div
            class="c11"
          >
            <input
              class="c12"
              placeholder="SEARCH..."
              value=""
            />
            <div
              class="c13"
            >
              <div
                class="c14"
              >
                <label
                  class="c15"
                >
                  <input
                    class="c16"
                    type="checkbox"
                  />
                  <div
                    class="c17 c18"
                  />
                </label>
                <div
                  class="c19"
                >
                  Advanced
                </div>
                <span
                  class="c20"
                >
                  <span
                    class="c21 c22 icon icon-info_outline "
                    color="light"
                    font-size="4"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c23"
      >
        <div
          class="c24"
          color="text.contrast"
          style="text-transform: uppercase;"
        >
          Showing 
          <strong>
            1
          </strong>
           - 
          <strong>
            7
          </strong>
           of
           
          <strong>
            7
          </strong>
        </div>
      </div>
    </div>
  </form>
  <table
    class="c25"
  >
    <thead>
      <tr>
        <th>
          <a>
            Hostname
            <span
              class="c21 c26 icon icon-chevron-up "
              color="light"
              title="sort items asc"
            />
          </a>
        </th>
        <th
          style="cursor: default;"
        >
          Address
        </th>
        <th
          style="cursor: default;"
        >
          Labels
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          fujedu
        </td>
        <td>
          172.10.1.20:3022
        </td>
        <td>
          <div
            class="c27"
          >
            <div
              class="c28"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c28"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c21 c30 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          facuzguv
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c27"
          >
            <div
              class="c28"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c28"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c21 c30 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          duzsevkig
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c27"
          >
            <div
              class="c28"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c28"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c21 c30 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          kuhinur
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c27"
          >
            <div
              class="c28"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c28"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c21 c30 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c27"
          >
            <div
              class="c28"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c28"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c21 c30 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          <span
            style="cursor: default;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ⟵ tunnel
          </span>
        </td>
        <td>
          <div
            class="c27"
          >
            <div
              class="c28"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c28"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c21 c30 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          <span
            style="cursor: default;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ⟵ tunnel
          </span>
        </td>
        <td>
          <div
            class="c27"
          >
            <div
              class="c28"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c28"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c29"
            height="24px"
            kind="border"
          >
            Connect
            <span
              class="c21 c30 icon icon-caret-down "
              color="text.slightlyMuted"
              font-size="2"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="c31"
  >
    <div
      class="c32"
      width="100%"
    >
      <div
        class="c23"
      >
        <button
          class="c33"
          title="Previous page"
        >
          <span
            class="c21 c34 icon icon-arrow-left-circle "
            color="light"
            font-size="3"
          />
        </button>
        <button
          class="c33"
          title="Next page"
        >
          <span
            class="c21 c34 icon icon-arrow-right-circle "
            color="light"
            font-size="3"
          />
        </button>
      </div>
    </div>
  </nav>
</div>
`;

exports[`readonly empty state 1`] = `
.c3 {
  box-sizing: border-box;
  max-width: 664px;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  color: rgba(255,255,255,0.87);
  text-align: center;
  border-radius: 12px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Servers
      </div>
    </div>
    <div
      class="c3"
      color="text.main"
    >
      <div
        class="c4"
      >
        No Servers Found
      </div>
      <div
        class="c5"
      >
        Either there are no 
        servers
         in the "
        <span
          class="c6"
        >
          im-a-cluster
        </span>
        " cluster, or your roles don't grant you access.
      </div>
    </div>
  </div>
</div>
`;
